[VARUN] ADD: the movie model and api to get and create movies and fixed some bugs in user models
